common/lib/sandbox-packages/hint/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     statement -> factor
Rule 3     statement -> list
Rule 4     expression -> expression PLUS factor
Rule 5     expression -> factor PLUS factor
Rule 6     expression -> expression MINUS factor
Rule 7     expression -> factor MINUS factor
Rule 8     factor -> factor TIMES factor
Rule 9     factor -> factor DIVIDE factor
Rule 10    factor -> factor EXP factor
Rule 11    factor -> factor factor
Rule 12    factor -> MINUS factor
Rule 13    factor -> factor FACTORIAL
Rule 14    factor -> CHOOSE LPAREN list RPAREN
Rule 15    factor -> PERMUTE LPAREN list RPAREN
Rule 16    factor -> Q LPAREN factor RPAREN
Rule 17    factor -> Q LPAREN expression RPAREN
Rule 18    factor -> PHI LPAREN factor RPAREN
Rule 19    factor -> PHI LPAREN expression RPAREN
Rule 20    factor -> LPAREN expression RPAREN
Rule 21    factor -> LBRACKET expression RBRACKET
Rule 22    factor -> LPAREN factor RPAREN
Rule 23    factor -> LBRACKET factor RBRACKET
Rule 24    factor -> SQRT LPAREN factor RPAREN
Rule 25    factor -> SQRT LPAREN expression RPAREN
Rule 26    factor -> COMPUTE LPAREN expression RPAREN
Rule 27    factor -> COMPUTE LPAREN factor RPAREN
Rule 28    factor -> LPAREN expression
Rule 29    factor -> LBRACKET expression
Rule 30    factor -> LPAREN factor
Rule 31    factor -> LBRACKET factor
Rule 32    factor -> CHOOSE LPAREN list
Rule 33    factor -> PERMUTE LPAREN list
Rule 34    factor -> LSET list RSET
Rule 35    factor -> LSET expression RSET
Rule 36    factor -> LSET RSET
Rule 37    factor -> LPAREN list RPAREN
Rule 38    list -> expression COMMA
Rule 39    list -> list expression COMMA
Rule 40    list -> list expression
Rule 41    list -> factor COMMA
Rule 42    list -> list factor COMMA
Rule 43    list -> list factor
Rule 44    factor -> NUMBER
Rule 45    factor -> VARIABLE

Terminals, with rules where they appear

CHOOSE               : 14 32
COMMA                : 38 39 41 42
COMPUTE              : 26 27
DIVIDE               : 9
EXP                  : 10
FACTORIAL            : 13
LBRACKET             : 21 23 29 31
LPAREN               : 14 15 16 17 18 19 20 22 24 25 26 27 28 30 32 33 37
LSET                 : 34 35 36
MINUS                : 6 7 12
NUMBER               : 44
PERMUTE              : 15 33
PHI                  : 18 19
PLUS                 : 4 5
Q                    : 16 17
RBRACKET             : 21 23
RPAREN               : 14 15 16 17 18 19 20 22 24 25 26 27 37
RSET                 : 34 35 36
SQRT                 : 24 25
TIMES                : 8
VARIABLE             : 45
error                : 

Nonterminals, with rules where they appear

expression           : 1 4 6 17 19 20 21 25 26 28 29 35 38 39 40
factor               : 2 4 5 5 6 7 7 8 8 9 9 10 10 11 11 12 13 16 18 22 23 24 27 30 31 41 42 43
list                 : 3 14 15 32 33 34 37 39 40 42 43
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) statement -> . factor
    (3) statement -> . list
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . PHI LPAREN factor RPAREN
    (19) factor -> . PHI LPAREN expression RPAREN
    (20) factor -> . LPAREN expression RPAREN
    (21) factor -> . LBRACKET expression RBRACKET
    (22) factor -> . LPAREN factor RPAREN
    (23) factor -> . LBRACKET factor RBRACKET
    (24) factor -> . SQRT LPAREN factor RPAREN
    (25) factor -> . SQRT LPAREN expression RPAREN
    (26) factor -> . COMPUTE LPAREN expression RPAREN
    (27) factor -> . COMPUTE LPAREN factor RPAREN
    (28) factor -> . LPAREN expression
    (29) factor -> . LBRACKET expression
    (30) factor -> . LPAREN factor
    (31) factor -> . LBRACKET factor
    (32) factor -> . CHOOSE LPAREN list
    (33) factor -> . PERMUTE LPAREN list
    (34) factor -> . LSET list RSET
    (35) factor -> . LSET expression RSET
    (36) factor -> . LSET RSET
    (37) factor -> . LPAREN list RPAREN
    (44) factor -> . NUMBER
    (45) factor -> . VARIABLE
    (38) list -> . expression COMMA
    (39) list -> . list expression COMMA
    (40) list -> . list expression
    (41) list -> . factor COMMA
    (42) list -> . list factor COMMA
    (43) list -> . list factor

    MINUS           shift and go to state 4
    CHOOSE          shift and go to state 15
    PERMUTE         shift and go to state 8
    Q               shift and go to state 10
    PHI             shift and go to state 13
    LPAREN          shift and go to state 11
    LBRACKET        shift and go to state 2
    SQRT            shift and go to state 3
    COMPUTE         shift and go to state 9
    LSET            shift and go to state 5
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 12

    list                           shift and go to state 14
    expression                     shift and go to state 16
    statement                      shift and go to state 6
    factor                         shift and go to state 7

state 1

    (44) factor -> NUMBER .

    TIMES           reduce using rule 44 (factor -> NUMBER .)
    DIVIDE          reduce using rule 44 (factor -> NUMBER .)
    EXP             reduce using rule 44 (factor -> NUMBER .)
    FACTORIAL       reduce using rule 44 (factor -> NUMBER .)
    MINUS           reduce using rule 44 (factor -> NUMBER .)
    CHOOSE          reduce using rule 44 (factor -> NUMBER .)
    PERMUTE         reduce using rule 44 (factor -> NUMBER .)
    Q               reduce using rule 44 (factor -> NUMBER .)
    PHI             reduce using rule 44 (factor -> NUMBER .)
    LPAREN          reduce using rule 44 (factor -> NUMBER .)
    LBRACKET        reduce using rule 44 (factor -> NUMBER .)
    SQRT            reduce using rule 44 (factor -> NUMBER .)
    COMPUTE         reduce using rule 44 (factor -> NUMBER .)
    LSET            reduce using rule 44 (factor -> NUMBER .)
    NUMBER          reduce using rule 44 (factor -> NUMBER .)
    VARIABLE        reduce using rule 44 (factor -> NUMBER .)
    RPAREN          reduce using rule 44 (factor -> NUMBER .)
    PLUS            reduce using rule 44 (factor -> NUMBER .)
    RBRACKET        reduce using rule 44 (factor -> NUMBER .)
    COMMA           reduce using rule 44 (factor -> NUMBER .)
    $end            reduce using rule 44 (factor -> NUMBER .)
    RSET            reduce using rule 44 (factor -> NUMBER .)


state 2

    (21) factor -> LBRACKET . expression RBRACKET
    (23) factor -> LBRACKET . factor RBRACKET
    (29) factor -> LBRACKET . expression
    (31) factor -> LBRACKET . factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . PHI LPAREN factor RPAREN
    (19) factor -> . PHI LPAREN expression RPAREN
    (20) factor -> . LPAREN expression RPAREN
    (21) factor -> . LBRACKET expression RBRACKET
    (22) factor -> . LPAREN factor RPAREN
    (23) factor -> . LBRACKET factor RBRACKET
    (24) factor -> . SQRT LPAREN factor RPAREN
    (25) factor -> . SQRT LPAREN expression RPAREN
    (26) factor -> . COMPUTE LPAREN expression RPAREN
    (27) factor -> . COMPUTE LPAREN factor RPAREN
    (28) factor -> . LPAREN expression
    (29) factor -> . LBRACKET expression
    (30) factor -> . LPAREN factor
    (31) factor -> . LBRACKET factor
    (32) factor -> . CHOOSE LPAREN list
    (33) factor -> . PERMUTE LPAREN list
    (34) factor -> . LSET list RSET
    (35) factor -> . LSET expression RSET
    (36) factor -> . LSET RSET
    (37) factor -> . LPAREN list RPAREN
    (44) factor -> . NUMBER
    (45) factor -> . VARIABLE

    MINUS           shift and go to state 4
    CHOOSE          shift and go to state 15
    PERMUTE         shift and go to state 8
    Q               shift and go to state 10
    PHI             shift and go to state 13
    LPAREN          shift and go to state 11
    LBRACKET        shift and go to state 2
    SQRT            shift and go to state 3
    COMPUTE         shift and go to state 9
    LSET            shift and go to state 5
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 12

    expression                     shift and go to state 18
    factor                         shift and go to state 17

state 3

    (24) factor -> SQRT . LPAREN factor RPAREN
    (25) factor -> SQRT . LPAREN expression RPAREN

    LPAREN          shift and go to state 19


state 4

    (12) factor -> MINUS . factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . PHI LPAREN factor RPAREN
    (19) factor -> . PHI LPAREN expression RPAREN
    (20) factor -> . LPAREN expression RPAREN
    (21) factor -> . LBRACKET expression RBRACKET
    (22) factor -> . LPAREN factor RPAREN
    (23) factor -> . LBRACKET factor RBRACKET
    (24) factor -> . SQRT LPAREN factor RPAREN
    (25) factor -> . SQRT LPAREN expression RPAREN
    (26) factor -> . COMPUTE LPAREN expression RPAREN
    (27) factor -> . COMPUTE LPAREN factor RPAREN
    (28) factor -> . LPAREN expression
    (29) factor -> . LBRACKET expression
    (30) factor -> . LPAREN factor
    (31) factor -> . LBRACKET factor
    (32) factor -> . CHOOSE LPAREN list
    (33) factor -> . PERMUTE LPAREN list
    (34) factor -> . LSET list RSET
    (35) factor -> . LSET expression RSET
    (36) factor -> . LSET RSET
    (37) factor -> . LPAREN list RPAREN
    (44) factor -> . NUMBER
    (45) factor -> . VARIABLE

    MINUS           shift and go to state 4
    CHOOSE          shift and go to state 15
    PERMUTE         shift and go to state 8
    Q               shift and go to state 10
    PHI             shift and go to state 13
    LPAREN          shift and go to state 11
    LBRACKET        shift and go to state 2
    SQRT            shift and go to state 3
    COMPUTE         shift and go to state 9
    LSET            shift and go to state 5
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 12

    factor                         shift and go to state 20

state 5

    (34) factor -> LSET . list RSET
    (35) factor -> LSET . expression RSET
    (36) factor -> LSET . RSET
    (38) list -> . expression COMMA
    (39) list -> . list expression COMMA
    (40) list -> . list expression
    (41) list -> . factor COMMA
    (42) list -> . list factor COMMA
    (43) list -> . list factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . PHI LPAREN factor RPAREN
    (19) factor -> . PHI LPAREN expression RPAREN
    (20) factor -> . LPAREN expression RPAREN
    (21) factor -> . LBRACKET expression RBRACKET
    (22) factor -> . LPAREN factor RPAREN
    (23) factor -> . LBRACKET factor RBRACKET
    (24) factor -> . SQRT LPAREN factor RPAREN
    (25) factor -> . SQRT LPAREN expression RPAREN
    (26) factor -> . COMPUTE LPAREN expression RPAREN
    (27) factor -> . COMPUTE LPAREN factor RPAREN
    (28) factor -> . LPAREN expression
    (29) factor -> . LBRACKET expression
    (30) factor -> . LPAREN factor
    (31) factor -> . LBRACKET factor
    (32) factor -> . CHOOSE LPAREN list
    (33) factor -> . PERMUTE LPAREN list
    (34) factor -> . LSET list RSET
    (35) factor -> . LSET expression RSET
    (36) factor -> . LSET RSET
    (37) factor -> . LPAREN list RPAREN
    (44) factor -> . NUMBER
    (45) factor -> . VARIABLE

    RSET            shift and go to state 21
    MINUS           shift and go to state 4
    CHOOSE          shift and go to state 15
    PERMUTE         shift and go to state 8
    Q               shift and go to state 10
    PHI             shift and go to state 13
    LPAREN          shift and go to state 11
    LBRACKET        shift and go to state 2
    SQRT            shift and go to state 3
    COMPUTE         shift and go to state 9
    LSET            shift and go to state 5
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 12

    expression                     shift and go to state 24
    list                           shift and go to state 23
    factor                         shift and go to state 22

state 6

    (0) S' -> statement .



state 7

    (2) statement -> factor .
    (5) expression -> factor . PLUS factor
    (7) expression -> factor . MINUS factor
    (8) factor -> factor . TIMES factor
    (9) factor -> factor . DIVIDE factor
    (10) factor -> factor . EXP factor
    (11) factor -> factor . factor
    (13) factor -> factor . FACTORIAL
    (41) list -> factor . COMMA
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . PHI LPAREN factor RPAREN
    (19) factor -> . PHI LPAREN expression RPAREN
    (20) factor -> . LPAREN expression RPAREN
    (21) factor -> . LBRACKET expression RBRACKET
    (22) factor -> . LPAREN factor RPAREN
    (23) factor -> . LBRACKET factor RBRACKET
    (24) factor -> . SQRT LPAREN factor RPAREN
    (25) factor -> . SQRT LPAREN expression RPAREN
    (26) factor -> . COMPUTE LPAREN expression RPAREN
    (27) factor -> . COMPUTE LPAREN factor RPAREN
    (28) factor -> . LPAREN expression
    (29) factor -> . LBRACKET expression
    (30) factor -> . LPAREN factor
    (31) factor -> . LBRACKET factor
    (32) factor -> . CHOOSE LPAREN list
    (33) factor -> . PERMUTE LPAREN list
    (34) factor -> . LSET list RSET
    (35) factor -> . LSET expression RSET
    (36) factor -> . LSET RSET
    (37) factor -> . LPAREN list RPAREN
    (44) factor -> . NUMBER
    (45) factor -> . VARIABLE

    $end            reduce using rule 2 (statement -> factor .)
    PLUS            shift and go to state 27
    MINUS           shift and go to state 26
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 30
    EXP             shift and go to state 25
    FACTORIAL       shift and go to state 32
    COMMA           shift and go to state 29
    CHOOSE          shift and go to state 15
    PERMUTE         shift and go to state 8
    Q               shift and go to state 10
    PHI             shift and go to state 13
    LPAREN          shift and go to state 11
    LBRACKET        shift and go to state 2
    SQRT            shift and go to state 3
    COMPUTE         shift and go to state 9
    LSET            shift and go to state 5
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 12

    factor                         shift and go to state 28

state 8

    (15) factor -> PERMUTE . LPAREN list RPAREN
    (33) factor -> PERMUTE . LPAREN list

    LPAREN          shift and go to state 33


state 9

    (26) factor -> COMPUTE . LPAREN expression RPAREN
    (27) factor -> COMPUTE . LPAREN factor RPAREN

    LPAREN          shift and go to state 34


state 10

    (16) factor -> Q . LPAREN factor RPAREN
    (17) factor -> Q . LPAREN expression RPAREN

    LPAREN          shift and go to state 35


state 11

    (20) factor -> LPAREN . expression RPAREN
    (22) factor -> LPAREN . factor RPAREN
    (28) factor -> LPAREN . expression
    (30) factor -> LPAREN . factor
    (37) factor -> LPAREN . list RPAREN
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . PHI LPAREN factor RPAREN
    (19) factor -> . PHI LPAREN expression RPAREN
    (20) factor -> . LPAREN expression RPAREN
    (21) factor -> . LBRACKET expression RBRACKET
    (22) factor -> . LPAREN factor RPAREN
    (23) factor -> . LBRACKET factor RBRACKET
    (24) factor -> . SQRT LPAREN factor RPAREN
    (25) factor -> . SQRT LPAREN expression RPAREN
    (26) factor -> . COMPUTE LPAREN expression RPAREN
    (27) factor -> . COMPUTE LPAREN factor RPAREN
    (28) factor -> . LPAREN expression
    (29) factor -> . LBRACKET expression
    (30) factor -> . LPAREN factor
    (31) factor -> . LBRACKET factor
    (32) factor -> . CHOOSE LPAREN list
    (33) factor -> . PERMUTE LPAREN list
    (34) factor -> . LSET list RSET
    (35) factor -> . LSET expression RSET
    (36) factor -> . LSET RSET
    (37) factor -> . LPAREN list RPAREN
    (44) factor -> . NUMBER
    (45) factor -> . VARIABLE
    (38) list -> . expression COMMA
    (39) list -> . list expression COMMA
    (40) list -> . list expression
    (41) list -> . factor COMMA
    (42) list -> . list factor COMMA
    (43) list -> . list factor

    MINUS           shift and go to state 4
    CHOOSE          shift and go to state 15
    PERMUTE         shift and go to state 8
    Q               shift and go to state 10
    PHI             shift and go to state 13
    LPAREN          shift and go to state 11
    LBRACKET        shift and go to state 2
    SQRT            shift and go to state 3
    COMPUTE         shift and go to state 9
    LSET            shift and go to state 5
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 12

    list                           shift and go to state 37
    expression                     shift and go to state 38
    factor                         shift and go to state 36

state 12

    (45) factor -> VARIABLE .

    TIMES           reduce using rule 45 (factor -> VARIABLE .)
    DIVIDE          reduce using rule 45 (factor -> VARIABLE .)
    EXP             reduce using rule 45 (factor -> VARIABLE .)
    FACTORIAL       reduce using rule 45 (factor -> VARIABLE .)
    MINUS           reduce using rule 45 (factor -> VARIABLE .)
    CHOOSE          reduce using rule 45 (factor -> VARIABLE .)
    PERMUTE         reduce using rule 45 (factor -> VARIABLE .)
    Q               reduce using rule 45 (factor -> VARIABLE .)
    PHI             reduce using rule 45 (factor -> VARIABLE .)
    LPAREN          reduce using rule 45 (factor -> VARIABLE .)
    LBRACKET        reduce using rule 45 (factor -> VARIABLE .)
    SQRT            reduce using rule 45 (factor -> VARIABLE .)
    COMPUTE         reduce using rule 45 (factor -> VARIABLE .)
    LSET            reduce using rule 45 (factor -> VARIABLE .)
    NUMBER          reduce using rule 45 (factor -> VARIABLE .)
    VARIABLE        reduce using rule 45 (factor -> VARIABLE .)
    RPAREN          reduce using rule 45 (factor -> VARIABLE .)
    PLUS            reduce using rule 45 (factor -> VARIABLE .)
    RBRACKET        reduce using rule 45 (factor -> VARIABLE .)
    COMMA           reduce using rule 45 (factor -> VARIABLE .)
    $end            reduce using rule 45 (factor -> VARIABLE .)
    RSET            reduce using rule 45 (factor -> VARIABLE .)


state 13

    (18) factor -> PHI . LPAREN factor RPAREN
    (19) factor -> PHI . LPAREN expression RPAREN

    LPAREN          shift and go to state 39


state 14

    (3) statement -> list .
    (39) list -> list . expression COMMA
    (40) list -> list . expression
    (42) list -> list . factor COMMA
    (43) list -> list . factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . PHI LPAREN factor RPAREN
    (19) factor -> . PHI LPAREN expression RPAREN
    (20) factor -> . LPAREN expression RPAREN
    (21) factor -> . LBRACKET expression RBRACKET
    (22) factor -> . LPAREN factor RPAREN
    (23) factor -> . LBRACKET factor RBRACKET
    (24) factor -> . SQRT LPAREN factor RPAREN
    (25) factor -> . SQRT LPAREN expression RPAREN
    (26) factor -> . COMPUTE LPAREN expression RPAREN
    (27) factor -> . COMPUTE LPAREN factor RPAREN
    (28) factor -> . LPAREN expression
    (29) factor -> . LBRACKET expression
    (30) factor -> . LPAREN factor
    (31) factor -> . LBRACKET factor
    (32) factor -> . CHOOSE LPAREN list
    (33) factor -> . PERMUTE LPAREN list
    (34) factor -> . LSET list RSET
    (35) factor -> . LSET expression RSET
    (36) factor -> . LSET RSET
    (37) factor -> . LPAREN list RPAREN
    (44) factor -> . NUMBER
    (45) factor -> . VARIABLE

    $end            reduce using rule 3 (statement -> list .)
    MINUS           shift and go to state 4
    CHOOSE          shift and go to state 15
    PERMUTE         shift and go to state 8
    Q               shift and go to state 10
    PHI             shift and go to state 13
    LPAREN          shift and go to state 11
    LBRACKET        shift and go to state 2
    SQRT            shift and go to state 3
    COMPUTE         shift and go to state 9
    LSET            shift and go to state 5
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 12

    expression                     shift and go to state 41
    factor                         shift and go to state 40

state 15

    (14) factor -> CHOOSE . LPAREN list RPAREN
    (32) factor -> CHOOSE . LPAREN list

    LPAREN          shift and go to state 42


state 16

    (1) statement -> expression .
    (4) expression -> expression . PLUS factor
    (6) expression -> expression . MINUS factor
    (38) list -> expression . COMMA

    $end            reduce using rule 1 (statement -> expression .)
    PLUS            shift and go to state 43
    MINUS           shift and go to state 45
    COMMA           shift and go to state 44


state 17

    (23) factor -> LBRACKET factor . RBRACKET
    (31) factor -> LBRACKET factor .
    (5) expression -> factor . PLUS factor
    (7) expression -> factor . MINUS factor
    (8) factor -> factor . TIMES factor
    (9) factor -> factor . DIVIDE factor
    (10) factor -> factor . EXP factor
    (11) factor -> factor . factor
    (13) factor -> factor . FACTORIAL
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . PHI LPAREN factor RPAREN
    (19) factor -> . PHI LPAREN expression RPAREN
    (20) factor -> . LPAREN expression RPAREN
    (21) factor -> . LBRACKET expression RBRACKET
    (22) factor -> . LPAREN factor RPAREN
    (23) factor -> . LBRACKET factor RBRACKET
    (24) factor -> . SQRT LPAREN factor RPAREN
    (25) factor -> . SQRT LPAREN expression RPAREN
    (26) factor -> . COMPUTE LPAREN expression RPAREN
    (27) factor -> . COMPUTE LPAREN factor RPAREN
    (28) factor -> . LPAREN expression
    (29) factor -> . LBRACKET expression
    (30) factor -> . LPAREN factor
    (31) factor -> . LBRACKET factor
    (32) factor -> . CHOOSE LPAREN list
    (33) factor -> . PERMUTE LPAREN list
    (34) factor -> . LSET list RSET
    (35) factor -> . LSET expression RSET
    (36) factor -> . LSET RSET
    (37) factor -> . LPAREN list RPAREN
    (44) factor -> . NUMBER
    (45) factor -> . VARIABLE

  ! shift/reduce conflict for RBRACKET resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for EXP resolved as shift
  ! shift/reduce conflict for FACTORIAL resolved as shift
  ! shift/reduce conflict for CHOOSE resolved as shift
  ! shift/reduce conflict for PERMUTE resolved as shift
  ! shift/reduce conflict for Q resolved as shift
  ! shift/reduce conflict for PHI resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for SQRT resolved as shift
  ! shift/reduce conflict for COMPUTE resolved as shift
  ! shift/reduce conflict for LSET resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
    RBRACKET        shift and go to state 46
    RPAREN          reduce using rule 31 (factor -> LBRACKET factor .)
    COMMA           reduce using rule 31 (factor -> LBRACKET factor .)
    $end            reduce using rule 31 (factor -> LBRACKET factor .)
    RSET            reduce using rule 31 (factor -> LBRACKET factor .)
    PLUS            shift and go to state 27
    MINUS           shift and go to state 26
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 30
    EXP             shift and go to state 25
    FACTORIAL       shift and go to state 32
    CHOOSE          shift and go to state 15
    PERMUTE         shift and go to state 8
    Q               shift and go to state 10
    PHI             shift and go to state 13
    LPAREN          shift and go to state 11
    LBRACKET        shift and go to state 2
    SQRT            shift and go to state 3
    COMPUTE         shift and go to state 9
    LSET            shift and go to state 5
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 12

  ! TIMES           [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! DIVIDE          [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! EXP             [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! FACTORIAL       [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! MINUS           [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! CHOOSE          [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! PERMUTE         [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! Q               [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! PHI             [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! LPAREN          [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! LBRACKET        [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! SQRT            [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! COMPUTE         [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! LSET            [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! NUMBER          [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! VARIABLE        [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! PLUS            [ reduce using rule 31 (factor -> LBRACKET factor .) ]
  ! RBRACKET        [ reduce using rule 31 (factor -> LBRACKET factor .) ]

    factor                         shift and go to state 28

state 18

    (21) factor -> LBRACKET expression . RBRACKET
    (29) factor -> LBRACKET expression .
    (4) expression -> expression . PLUS factor
    (6) expression -> expression . MINUS factor

  ! shift/reduce conflict for RBRACKET resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    RBRACKET        shift and go to state 47
    TIMES           reduce using rule 29 (factor -> LBRACKET expression .)
    DIVIDE          reduce using rule 29 (factor -> LBRACKET expression .)
    EXP             reduce using rule 29 (factor -> LBRACKET expression .)
    FACTORIAL       reduce using rule 29 (factor -> LBRACKET expression .)
    CHOOSE          reduce using rule 29 (factor -> LBRACKET expression .)
    PERMUTE         reduce using rule 29 (factor -> LBRACKET expression .)
    Q               reduce using rule 29 (factor -> LBRACKET expression .)
    PHI             reduce using rule 29 (factor -> LBRACKET expression .)
    LPAREN          reduce using rule 29 (factor -> LBRACKET expression .)
    LBRACKET        reduce using rule 29 (factor -> LBRACKET expression .)
    SQRT            reduce using rule 29 (factor -> LBRACKET expression .)
    COMPUTE         reduce using rule 29 (factor -> LBRACKET expression .)
    LSET            reduce using rule 29 (factor -> LBRACKET expression .)
    NUMBER          reduce using rule 29 (factor -> LBRACKET expression .)
    VARIABLE        reduce using rule 29 (factor -> LBRACKET expression .)
    RPAREN          reduce using rule 29 (factor -> LBRACKET expression .)
    COMMA           reduce using rule 29 (factor -> LBRACKET expression .)
    $end            reduce using rule 29 (factor -> LBRACKET expression .)
    RSET            reduce using rule 29 (factor -> LBRACKET expression .)
    PLUS            shift and go to state 43
    MINUS           shift and go to state 45

  ! MINUS           [ reduce using rule 29 (factor -> LBRACKET expression .) ]
  ! PLUS            [ reduce using rule 29 (factor -> LBRACKET expression .) ]
  ! RBRACKET        [ reduce using rule 29 (factor -> LBRACKET expression .) ]


state 19
